email_added_minorUITweeks

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,11 @@ body.bg{
 	background-image: url("../assets/background.jpg"); 
 	background-size: cover; 
 	background-repeat: no-repeat; 
+	background-position: center;
 	height: 100vh;
 }
 img.logo{
+	padding-top: 10px;
 	height: 120px;
 }
 h1, h4{
@@ -21,12 +23,21 @@ h4{
 	margin-top: 20px;
 }
 h5{
-	color: #f0f0f0;
+	color: #fff;
 	font-weight: 400;
 	margin-top: 25px;
+	font-size: 28px;
 }
 .content{
 	margin-top: 50px;
+}
+p{
+	float: right;
+	color: #fff;
+	margin-top: 20px;
+}
+.header{
+	/*padding-top: 25px;*/
 }
 
 @media(max-width: 767px){
