--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,9 @@ a:hover, a:active, a:visited{
 h5 span{
 	border: 3px solid #fff;
     padding: 5px 10px;
+    color: #0b161a;
+    background: #fff;
+    font-weight: 700;
 }
 
 @media(max-width: 767px){
